	* Eliminated several bugs from original rcp code.
	* Fixed several pdcp bugs related to -r option.
	* Fixed pdcp access/modification time errors with -p option.
	* Updated pdcp manpage to be clearer about pdcp functionality.
	* "bsd" rcmd renamed to "rsh" rcmd 
	* Fixed scalability issues with mcmd/mqcmd file descriptors
	* Fixed scalability issues with select() by using poll()
	* Fixed race condition in mcmd
	* Tweaked of configuration, makefiles, manpages, and documents for
	  readability and portability.
	
2003-06-24 achu
	* added ability to compile modules in statically with
	  --enable-static-modules option
	* ssh no longer compiled automatically, needs --with-ssh option
	* mqshd built to be independent of net-toollib library 
	* added checks to differentiate between options/modules suitable for 
	  pdsh vs. pdcp
	* added several error/warning messages to specific modules
	* minor tweaking of configuration, makefiles, documents, and manpages
	  for readability and portability.

2003-06-13 achu
	* added support for mqsh rcmd and mqshd daemon
	* updated manpages and docs for pdsh and pdcp
	* variety of minor tweaks and modifications in code and autoconf
        
2003-06-03 achu
	* added support for mrsh rcmd
	
2003-05-21 grondo
	* Changed behavior of mod_read_wcoll() to call exported read_wcoll
 	functions from all modules (instead of only first to return non-NULL).
	* Added --with-* configure options for all modules mainly to support 
	rpmbuild which doesn't support configure-time determination of 
 	subpackages.

2003-05-21 grondo
	* Changed pdsh list implementation to Chris Dunlap's list.[ch]
	* Added mod.[ch] and mod_rcmd.[ch] for pdsh module loading/unloading.
	* Added ltdl.[ch] from libtool 1.4.3 (1.922.2.111 2002/10/23 02:54:36)
	* Updated to new pdsh "modules" design. Added modules subdirectory,
	removed sshcmd.c, qcmd.c, xrcmd.c and added new "rcmd" modules with
	same functionality. Moved libgenders, nodeattr, nodeupdown, and